--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,14 @@
     <artifactId>lanxinplus-openapi-java-sdk</artifactId>
     <packaging>jar</packaging>
     <name>lanxinplus-openapi-java-sdk</name>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     <url>https://openapi.lanxin.cn</url>
     <description>LanXin+ OpenAPI Java</description>
+    <scm>
+        <connection>scm:git:git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</connection>
+        <developerConnection>scm:git:git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</developerConnection>
+        <url>git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</url>
+    </scm>
 
     <build>
         <plugins>
@@ -184,6 +189,16 @@
                     </plugin>
                 </plugins>
             </build>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>oss</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                </snapshotRepository>
+                <repository>
+                    <id>oss</id>
+                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+                </repository>
+            </distributionManagement>
         </profile>
     </profiles>
 
