--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,18 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.lanxin</groupId>
     <artifactId>lanxinplus-openapi-java-sdk</artifactId>
     <packaging>jar</packaging>
     <name>lanxinplus-openapi-java-sdk</name>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <url>https://openapi.lanxin.cn</url>
     <description>LanXin+ OpenAPI Java</description>
     <scm>
         <connection>scm:git:git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</connection>
         <developerConnection>scm:git:git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</developerConnection>
         <url>git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</url>
-    </scm>
+      <tag>lanxinplus-openapi-java-sdk-1.0.0</tag>
+  </scm>
 
     <build>
         <plugins>
