--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
     <artifactId>lanxinplus-openapi-java-sdk</artifactId>
     <packaging>jar</packaging>
     <name>lanxinplus-openapi-java-sdk</name>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <url>https://openapi.lanxin.cn</url>
     <description>LanXin+ OpenAPI Java</description>
     <scm>
         <connection>scm:git:git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</connection>
         <developerConnection>scm:git:git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</developerConnection>
         <url>git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</url>
-      <tag>lanxinplus-openapi-java-sdk-1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <build>
