--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,15 @@
     <artifactId>lanxinplus-openapi-java-sdk</artifactId>
     <packaging>jar</packaging>
     <name>lanxinplus-openapi-java-sdk</name>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <url>https://openapi.lanxin.cn</url>
     <description>LanXin+ OpenAPI Java</description>
     <scm>
         <connection>scm:git:git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</connection>
         <developerConnection>scm:git:git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</developerConnection>
         <url>git@github.com:lanxinplus/lanxinplus-openapi-java-sdk.git</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>1.0.0</tag>
+    </scm>
 
     <build>
         <plugins>
@@ -191,11 +191,13 @@
             </build>
             <distributionManagement>
                 <snapshotRepository>
-                    <id>oss</id>
+                    <id>sonatype-nexus-snapshots</id>
+                    <name>Sonatype Nexus Snapshots</name>
                     <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
                 </snapshotRepository>
                 <repository>
-                    <id>oss</id>
+                    <id>sonatype-nexus-staging</id>
+                    <name>Nexus Release Repository</name>
                     <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </repository>
             </distributionManagement>
